[package]
name = "radixdlt-rust"
version = "0.1.0"
authors = ["Sajjon <alex.cyon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.20.0"
sha2 = "0.8.0"
rand = "0.7.2"
sha256 = "0.1.0"
serde = "1.0.101"
serde_cbor = "0.10.1"